--- a/cv.html
+++ b/cv.html
@@ -7,7 +7,7 @@ categories: writing
 permalink: /writing/creation-of-a-landscape/
 permalink: /cv
 ---
-
+<a href="/assets/santosh_chaluvaraju_resume_2023.pdf" target="_blank"></a>
 <!--<iframe src="https://docs.google.com/document/d/e/2PACX-1vRuKew-2_LBCyKzPHy039LNczGuuDVfpRDvNOP8EANF4L_Bhr2OqGzCg3nCSUqblLAJZaHEPZnRhgRC/pub?embedded=true" style="position:fixed; width:58%; height:100%;  margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>-->
 <!--<iframe src="https://drive.google.com/file/d/1wJqI_rFcH72Mo60rpr8Ozfz9Y_EkJ38E/view?usp=sharing" style="position:fixed; width:58%; height:100%;  margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>-->
 <!--<iframe src="https://drive.google.com/file/d/1wJqI_rFcH72Mo60rpr8Ozfz9Y_EkJ38E/view?usp=sharing" width="100%" height="800rem">-->
