adding resume tweaks

--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@ date: 2013-11-01
 layout: pdf
 categories: writing
 permalink: /writing/creation-of-a-landscape/
-permalink: /cv
+permalink: /resume
 ---
 <a href="/assets/santosh_chaluvaraju_resume_2023.pdf" target="_blank"></a>
 <!--<iframe src="https://docs.google.com/document/d/e/2PACX-1vRuKew-2_LBCyKzPHy039LNczGuuDVfpRDvNOP8EANF4L_Bhr2OqGzCg3nCSUqblLAJZaHEPZnRhgRC/pub?embedded=true" style="position:fixed; width:58%; height:100%;  margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>-->
